# async_deps

./: README.md  pyproject.toml
.github/workflows/: main.yml
async_deps/: __init__.py  cache.py  server.py
examples/fish/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
examples/fish/config/: definitions.json  start_rabbitmq.sh
examples/fish/data/: sample.batch.ndjson  sample.ndjson
examples/fish/fish/: predict.py  predict_batch.py  train.py
