[tool.poetry]
name = "async_deps"
version = "0.1.0"
description = "Asynchronous dependency injection"
authors = ["Will Badart <will@willbadart.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
