[tool.poetry]
name = "fish"
version = "0.1.0"
description = "Fancy fish prediction service"
authors = ["Will Badart <will@willbadart.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.3"
scikit-learn = "^0.23.1"
async-deps = {git = "https://github.com/wbadart/async_deps.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
